# GYVD

./: .gitignore  CMakeLists.txt  GYVD.glade  README.md
glade/: GYVD.glade  GYVD.glade~
src/: main.c
src/.ccls-cache/@home@guilherme@GitHub@GYVD@src/: main.c  main.c.blob
